exemplo posicionamento esttatico e relativo

--- a/Ejercicio 15.4.html
+++ b/Ejercicio 15.4.html
@@ -45,6 +45,12 @@
             
             #cabecera h1 {
                 background-image: url(logo.gif);
+                background-position: center left;
+                background-repeat:no-repeat;
+            }
+            
+            #cabecera h1 span{
+                visibility: hidden;
             }
 
             /*-- Menu ------------------------------------------------------------*/
@@ -96,6 +102,7 @@
                 margin-bottom: .5em;
                 border-bottom: 1px solid #004C99;
                 background-image: url(f1.png);
+                background-repeat: repeat-x;
             }
 
             #contenido {
@@ -111,7 +118,7 @@
                 border: 1px solid #C60;
             }
 
-            #contenido #secundario h2{
+            #secundario h2{
                 background-color: #DB905C;
                 padding: .2em;
             }
